--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Alejandro Lopez's Portfolio</title>
+</head>
 
+<body>
+<div class="header">
+    <header>
+        <div id="nav">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#my-projects">My Projects</a>
+                    </li>
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>    
+                </ul>
+            </nav>
+        </div>
+    </header>
+</div>
+<div class="header-image">
+<img src="./assets/images/Silver Spring.jpg" alt="beautiful spring in Florida surrounded by green
+forest"/>
+<h1 id="base">Work that will age like a fine wine...</h1>
+<h1 id="layer">Work that will age like a fine wine...</h1>
+</div>
+</body>
+
+</html>
