Added logo and fixed header image and nav bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <div class="header">
     <header>
+        <img id="logo" src="./assets/images/Phantom Pineapple Icon.png" />
         <div id="nav">
             <nav>
                 <ul>
