Added About Me Picture and wrote About Me section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./assets/css/reset.css" />
@@ -8,32 +9,50 @@
 </head>
 
 <body>
-<div class="header">
-    <header>
-        <img id="logo" src="./assets/images/Phantom Pineapple Icon.png" />
-        <div id="nav">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#about-me">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#my-projects">My Projects</a>
-                    </li>
-                    <li>
-                        <a href="#contact-me">Contact Me</a>
-                    </li>    
-                </ul>
-            </nav>
+    <div class="header">
+        <header>
+            <img id="logo" src="./assets/images/Phantom Pineapple Icon.png" />
+            <div id="nav">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#about-me">About Me</a>
+                        </li>
+                        <li>
+                            <a href="#my-projects">My Projects</a>
+                        </li>
+                        <li>
+                            <a href="#contact-me">Contact Me</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
+    <div class="header-image">
+        <img src="./assets/images/Silver Spring.jpg" alt="beautiful spring in Florida surrounded by green
+forest" />
+        <h1 id="base">Work that will age like a fine wine...</h1>
+        <h1 id="layer">Work that will age like a fine wine...</h1>
+    </div>
+    <article>
+        <div id="about-me">
+            <img src="./assets/images/Ale Profile Picture Square.jpg" alt="Front picture of young man with light orange and blue jacket standing in front of cliff" />
+            <h2>About Me</h2>
+            <p>Hello, my name is Alejandro Lopez. I'm an aspiring Web Developer and wanted to show off my work. Depending on when you're reading this, this porfolio maybe either humble and 
+                a small start, or the impressive library. My technical background is front-end work building and maintaining websites on WordPress using the Divi theme. I'm hoping to branch
+                into full-stack work programming and letting my creativity flow.
+            </p>
+            <p>I'm the second of four boys so I'm no stranger to being competitive. I'm also into nerdier things like Warhammer 40k and Magic the Gathering. While I wouldn't say I'm an expert
+                in either, I love learning about them and am always down to play a game. I like to paint my 40k miniatures which means I have an eye for detail. Believe you me, you start to 
+                notice smaller details when you're trying to paint a figure the size of your thumb. Besides that, I'm a huge fan of rock climbing. I used to be pretty good a few years ago,
+                dishing out finger pull-ups like they were nothing, but responsibility started calling and I was forced to answer. I am however, confident that I can still do at least 5 finger
+                pull-ups and would bet a job that I can do it. 
+            </p>
+            <p>Hopefully you see something in this portfolio that you like. If you have any questions or suggestions, feel free to contact me. If you have a job offer, <strong>definitely</strong>
+            contact me and I'd love to chat. Keep it sleezy people</p>
         </div>
-    </header>
-</div>
-<div class="header-image">
-<img src="./assets/images/Silver Spring.jpg" alt="beautiful spring in Florida surrounded by green
-forest"/>
-<h1 id="base">Work that will age like a fine wine...</h1>
-<h1 id="layer">Work that will age like a fine wine...</h1>
-</div>
+    </article>
 </body>
 
 </html>
