--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="#about-me">About Me</a>
+                            <a href="#about">About Me</a>
                         </li>
                         <li>
-                            <a href="#my-projects">My Projects</a>
+                            <a href="#projects">My Projects</a>
                         </li>
                         <li>
                             <a href="#contact-me">Contact Me</a>
@@ -76,13 +76,32 @@ forest" />
         <div class="project-title">
             <h2 class="about-title">My Projects</h2>
         </div>
-        <div class="project-cards">
+        <div class="row">
+            <div class="column">
             <section class="card">
-                <img src="./assets/images/Horiseon-SEO-Services-Challenge-Refactor.png" alt="Horiseon Website Refactor Screenshot" />
+                <img src="./assets/images/Horiseon-SEO-Services-Challenge-Refactor-Card.png" alt="Horiseon Website Refactor Screenshot" />
                 <p class="project-name">Horiseon Website Refactor</p>
             </section>
-
+            </div>
         </div>
+        <div class="row">
+            <div class="column">
+            <section class="card">
+                <img src="./assets/images/Under Construction Card.png" alt="Under Construction Placeholder" />
+                <p class="project-name">Coming Soon!</p>
+            </section>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+            <section class="card">
+                <img src="./assets/images/Under Construction Card.png" alt="Under Construction Placeholder" />
+                <p class="project-name">Coming Soon!</p>
+            </section>
+            </div>
+        </div>
+        </div>
+    </div>    
     </article>
 </body>
 
