Changed Contact Me section to remove form and make list with social media icons. Started mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ forest" />
                     class="float-left" />
             </div>
             <div class="about-main">
-                <h2 class="about-title">About Me</h2>
+                <h2 class="title">About Me</h2>
                 <div class="main-bio">
                     <p class="bio">Hello, my name is Alejandro Lopez. I'm an aspiring Web Developer and wanted to show
                         off my work.
@@ -69,7 +69,7 @@ forest" />
                         suggestions, feel free to contact me. If you have a job offer, <strong>definitely</strong>
                         contact me and I'd love to chat. Keep it sleezy people!
                     </p>
-                    <a href="#" class="contact">Contact Me</a>
+                    <a href=tel:"888-888-8888" class="contact">Contact Me</a>
                 </div>
             </div>
         </div>
@@ -77,13 +77,14 @@ forest" />
     </div>
     <article id="projects" class="format">
         <div class="project-title">
-            <h2 class="about-title">My Projects</h2>
+            <h2 class="title">My Projects</h2>
         </div>
         <div class="row">
             <div class="column">
                 <section class="card">
-                    <img src="./assets/images/Horiseon-SEO-Services-Challenge-Refactor-Card.png"
-                        alt="Horiseon Website Refactor Screenshot" />
+                    <a href="https://github.com/AleLopez023/horiseon-code-refactor"><img
+                            src="./assets/images/Horiseon-SEO-Services-Challenge-Refactor-Card.png"
+                            alt="Horiseon Website Refactor Screenshot" /></a>
                     <p class="project-name">Horiseon Website Refactor</p>
                 </section>
             </div>
@@ -102,6 +103,33 @@ forest" />
         </div>
         </div>
     </article>
+    <article id="contact-me" class="format">
+        <div class="contact-title">
+            <h2 class="title">Contact Me</h2>
+        </div>
+        <div class="form">
+            <div class="contact-info">
+                <ul>
+                    <li>Email Me: <a href="email@email.com">email@email.com</a></li>
+                    <li>Call Me: <a href=tel:"888-888-888">(888) 888-8888</a></li>
+                </ul>
+            </div>
+            <div class="socials">
+                <ul class="logos">
+                    <li><a href="#"><img src="./assets/images/Facebook-logo.png" alt="Facebook logo"></a></li>
+                    <li><a href="#"><img src="./assets/images/Instagram-logo.png" alt="Instagram logo"></a></li>
+                    <li><a href="#"><img src="./assets/images/Linkedin-logo.png" alt="Linkedin logo"></a></li>
+                </ul>
+            </div>
+        </div>
+    </article>
+    <footer>
+        <div class="footer">
+                <p>
+                    2024 An Alejandro Lopez Production
+                </p>    
+        </div>
+    </footer>
 </body>
 
 </html>
