Made changes to header and had help troubleshooting responsiveness issues

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 forest" />
         <h1>Work that will age like a fine wine...</h1>
     </div>
-    <!--<div class="content">-->
     <article id="about" class="format">
         <div class="main-container">
             <div class="profile-picture">
@@ -116,18 +115,21 @@ forest" />
             </div>
             <div class="socials">
                 <ul class="logos">
-                    <li><a href="#"><img src="./assets/images/Facebook-logo.png" alt="Facebook logo"></a></li>
-                    <li><a href="#"><img src="./assets/images/Instagram-logo.png" alt="Instagram logo"></a></li>
-                    <li><a href="#"><img src="./assets/images/Linkedin-logo.png" alt="Linkedin logo"></a></li>
+                    <li><a href="facebook.com"><img src="./assets/images/Facebook-logo.png" alt="Facebook logo"></a>
+                    </li>
+                    <li><a href="instagram.com"><img src="./assets/images/Instagram-logo.png" alt="Instagram logo"></a>
+                    </li>
+                    <li><a href="linkedin.com"><img src="./assets/images/Linkedin-logo.png" alt="Linkedin logo"></a>
+                    </li>
                 </ul>
             </div>
         </div>
     </article>
     <footer>
         <div class="footer">
-                <p>
-                    2024 An Alejandro Lopez Production
-                </p>    
+            <p>
+                2024 An Alejandro Lopez Production
+            </p>
         </div>
     </footer>
 </body>
