Finished adding mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@ forest" />
             </div>
             <div class="socials">
                 <ul class="logos">
-                    <li><a href="facebook.com"><img src="./assets/images/Facebook-logo.png" alt="Facebook logo"></a>
+                    <li><a href="https://facebook.com" target="_blank"><img src="./assets/images/Facebook-logo.png" alt="Facebook logo"></a>
                     </li>
-                    <li><a href="instagram.com"><img src="./assets/images/Instagram-logo.png" alt="Instagram logo"></a>
+                    <li><a href="https://instagram.com" target="_blank"><img src="./assets/images/Instagram-logo.png" alt="Instagram logo"></a>
                     </li>
-                    <li><a href="linkedin.com"><img src="./assets/images/Linkedin-logo.png" alt="Linkedin logo"></a>
+                    <li><a href="https://linkedin.com" target="_blank"><img src="./assets/images/Linkedin-logo.png" alt="Linkedin logo"></a>
                     </li>
                 </ul>
             </div>
